--- a/src/main/resources/styles/light-theme.css
+++ b/src/main/resources/styles/light-theme.css
@@ -15,3 +15,7 @@
 .choice-box, .choice-box .label {
     -fx-text-fill: white;
 }
+.table-view .column-header .label {
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+}
