--- a/src/main/resources/styles/dark-theme.css
+++ b/src/main/resources/styles/dark-theme.css
@@ -8,6 +8,40 @@
 }
 
 .button {
-    -fx-background-color: #2d2d2d;
+    -fx-background-color: #e0e0e0;
+    -fx-text-fill: black;
+}
+.table-view {
+    -fx-background-color: #2b2b2b;
+    -fx-table-cell-border-color: #3a3a3a;
+    -fx-control-inner-background: #2b2b2b;
+    -fx-padding: 5;
+    -fx-text-fill: #f0f0f0;
+}
+
+.table-view .column-header {
+    -fx-background-color: #3a3a3a;
+    -fx-text-fill: #ffffff;
+    -fx-font-weight: bold;
+}
+
+.table-view .table-row-cell {
+    -fx-background-color: #2b2b2b;
+    -fx-text-fill: #ffffff;
+}
+
+.table-view .table-row-cell:filled:selected,
+.table-view .table-row-cell:focused:selected {
+    -fx-background-color: #0b66a3;
     -fx-text-fill: white;
+}
+
+.table-view .table-cell {
+    -fx-border-color: #3a3a3a;
+}
+.table-view .scroll-bar:horizontal {
+    -fx-opacity: 0;
+    -fx-pref-height: 0;
+    -fx-max-height: 0;
+    -fx-min-height: 0;
 }
